--- a/src/sample/Sample.LabelMarkdown/Sample.LabelMarkdown/MainPage.xaml
+++ b/src/sample/Sample.LabelMarkdown/Sample.LabelMarkdown/MainPage.xaml
@@ -38,28 +38,7 @@
     
 
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
-
-        <!--<Label Text="Start **bold text** stop."
-               HorizontalOptions="Center"
-               VerticalOptions="CenterAndExpand"></Label>-->
-
-        <!--<markDown:LabelMarkdown x:Name="LabelMarkdownTest1"
-                                UrlLinkColor="DeepPink"
-                                Variable1="{Binding Source={x:Reference This}, Path=Var1}"
-                                TextMarkdown="#Header 1  &#x0a;##Header 2  &#x0a;###Header 3 _with italic_  &#x0a;First Line with some _italic text_.  &#x0a;New Line with Variable 1 in bold: **{{1}}**  &#x0a;New line with variable 3: {{3}}  &#x0a;[Link to Google](https://www.google.com) &#x0a;"
-                                Variable3="Var3"
-                                Header1Style="{DynamicResource Header1SpanStyle}"
-                                Header2Style="{DynamicResource Header2SpanStyle}"
-                                Header3Style="{DynamicResource Header3SpanStyle}"
-                                HorizontalOptions="Center"
-                                VerticalOptions="CenterAndExpand"></markDown:LabelMarkdown>-->
-
-
-        <markDown:LabelMd x:Name="LabelMarkdownTest"
+        <markDown:LabelMd x:Name="LabelMarkdownTest1"
                                 UrlLinkColor="Purple"
                                 Variable1="{Binding Source={x:Reference This}, Path=Var1}"
                                 Variable3="Var3"
@@ -71,22 +50,22 @@
                                 VerticalOptions="CenterAndExpand"></markDown:LabelMd>
 
 
-        <markDown:LabelMd UrlLinkColor="Blue"
+        <!--<markDown:LabelMd UrlLinkColor="Blue"
                                 TextMarkdown="#Header 1  &#x0a;First _Line_."
                                 HorizontalOptions="Center"
                                 VerticalOptions="CenterAndExpand"></markDown:LabelMd>
 
 
-        <markDown:LabelMd x:Name="LabelMarkdownTest1"
+        <markDown:LabelMd x:Name="LabelMarkdownTest2"
                                 UrlLinkColor="Aqua"
                                 Variable1="{Binding Source={x:Reference This}, Path=Var1}"
                                 Variable3="Var3"
-                                TextMarkdown="#Header 1  &#x0a;##Header 2  &#x0a;###Header 3 _with italic_  &#x0a;First Line with some _italic text_.  &#x0a;New Line with Variable 1 in bold: **{{1}}**  &#x0a;New line with variable 3: {{3}}  &#x0a;[Link to Google](https://www.google.com) &#x0a;"
                                 Header1Style="{DynamicResource Header1SpanStyleB}"
                                 Header2Style="{DynamicResource Header2SpanStyle}"
                                 Header3Style="{DynamicResource Header3SpanStyle}"
+                                LineHeight="2"
                                 HorizontalOptions="Center"
-                                VerticalOptions="CenterAndExpand"></markDown:LabelMd>
+                                VerticalOptions="CenterAndExpand"></markDown:LabelMd>-->
     </StackLayout>
 
 </ContentPage>
