--- a/src/sample/Sample.LabelMarkdown/Sample.LabelMarkdown/MainPage.xaml
+++ b/src/sample/Sample.LabelMarkdown/Sample.LabelMarkdown/MainPage.xaml
@@ -43,7 +43,7 @@
                                 UrlLinkColor="Purple"
                                 Variable1="{Binding Source={x:Reference This}, Path=Var1}"
                                 Variable3="Var3"
-                                TextMarkdown="#Header A  &#x0a;##Header B  &#x0a;###Header C _with italic_  &#x0a;_First Line is italic text._  &#x0a;New Line with Variable 1 in bold: **{{1}}**  &#x0a;New line with variable 3: {{3}}  &#x0a;[Link to Google](https://www.google.com) &#x0a;"
+                                TextMarkdown="#Header A  &#x0a;##Header B  &#x0a;###Header C _with italic_  &#x0a;_First Line is italic text._  &#x0a;New Line with Variable 1 in bold: **{{1}}**  &#x0a;New line with variable 3: {{3}}  &#x0a;*Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*"
                                 Header1Style="{DynamicResource Header1SpanStyleA}"
                                 Header2Style="{DynamicResource Header2SpanStyle}"
                                 Header3Style="{DynamicResource Header3SpanStyle}"
