--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:md="clr-namespace:MdLabel;assembly=MdLabel"
              x:Class="MdLabelDemo.MainPage">
 			 
     <ScrollView>
@@ -34,6 +35,14 @@
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
+
+            <md:MarkdownLabel 
+                TextMarkdown="This is a **test**."
+                FontSize="12"
+                Margin="60,0,60,0"
+                VerticalOptions="Start"
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"></md:MarkdownLabel>
 
         </VerticalStackLayout>
     </ScrollView>
