--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -62,7 +62,7 @@
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
 
-            <md:MarkdownView 
+            <!--<md:MarkdownView 
                 Text="# {{2}}Header A  ## Header B  ### Header C _with italic_  _First Line is italic text._    New Line with Variable 1 in bold: **{{1}}**    ~~New line with variable 3: {{3}}~~  *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*  Final Line... :thumbsup:"
                 Header1Style="{DynamicResource Header1SpanStyleA}"
                 Header2Style="{DynamicResource Header2SpanStyle}"
@@ -72,10 +72,10 @@
                 Margin="60,0,60,0"
                 VerticalOptions="Start"
                 HorizontalOptions="Center">
-            </md:MarkdownView>
+            </md:MarkdownView>-->
 
-            <!--<md:MarkdownLabel 
-                TextMarkdown="# {{2}}Header A  ## Header B  ### Header C _with italic_  _First Line is italic text._  New Line with Variable 1 in bold: **{{1}}**  New line with variable 3: {{3}}  *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*"
+            <md:MarkdownLabel 
+                Text ="# {{2}}Header A  ## Header B  ### Header C _with italic_  _First Line is italic text._  New Line with Variable 1 in bold: **{{1}}**  New line with variable 3: {{3}}  *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*"
                 Header1Style="{DynamicResource Header1SpanStyleA}"
                 Header2Style="{DynamicResource Header2SpanStyle}"
                 Header3Style="{DynamicResource Header3SpanStyle}"
@@ -84,7 +84,7 @@
                 VerticalOptions="Start"
                 HorizontalOptions="Center"
                 HorizontalTextAlignment="Center">
-            </md:MarkdownLabel>-->
+            </md:MarkdownLabel>
 
             <!--<md:MarkdownLabel 
                 TextMarkdown="# {{2}}Header A  &#x0a;## Header B  &#x0a;### Header C _with italic_  &#x0a;_First Line is italic text._  &#x0a;New Line with Variable 1 in bold: **{{1}}**  &#x0a;New line with variable 3: {{3}}  &#x0a;*Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*"
