--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -2,9 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:md="clr-namespace:MdLabel;assembly=MdLabel"
+             xmlns:local="clr-namespace:MdLabelDemo"
              x:Class="MdLabelDemo.MainPage">
 
-    <ContentPage.Resources>
+    <!--<ContentPage.Resources>
         <ResourceDictionary>
 
             <Style TargetType="Span" x:Key="Header1SpanStyleA">
@@ -28,7 +29,7 @@
             </Style>
 
         </ResourceDictionary>
-    </ContentPage.Resources>
+    </ContentPage.Resources>-->
 
     <ScrollView>
         <VerticalStackLayout 
@@ -47,13 +48,47 @@
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
-            
+
             <Label 
                 Text="Welcome to .NET Multi-platform App UI"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I"
                 FontSize="18"
-                HorizontalOptions="Center" />
+                HorizontalOptions="Center">
+            </Label>
+
+            <Label x:Name="TestLabel1" 
+                FontSize="18"
+                HorizontalOptions="Center">
+                <Label.Resources>
+                    <ResourceDictionary>
+                        <!--<Style x:Key="baseStyle" TargetType="Element">
+                        </Style>-->
+                        <Style x:Key="StyleB" TargetType="Span" BasedOn="{StaticResource Header1StyleBase}">
+                            <Setter Property="FontSize" Value="24"></Setter>
+                            <Setter Property="TextColor" Value="Red"></Setter>
+                        </Style>
+                        <Style x:Key="StyleC" TargetType="Span" BasedOn="{StaticResource Header1StyleBase}">
+                            <Setter Property="FontSize" Value="32"></Setter>
+                            <Setter Property="TextColor" Value="Blue"></Setter>
+                        </Style>
+                    </ResourceDictionary>
+                </Label.Resources>
+                <Label.FormattedText>
+                    <FormattedString>
+                        <local:TestHeader1Span Text="Test">
+                            
+                        </local:TestHeader1Span>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
+
+            <Button x:Name="ChangeStyleButton"
+                    Text="Change Style"
+                    Clicked="OnChangeStyleButtonClicked"
+                    HorizontalOptions="Center">
+                
+            </Button>
 
             <Button 
                 x:Name="CounterBtn"
@@ -74,7 +109,8 @@
                 HorizontalOptions="Center">
             </md:MarkdownView>-->
 
-            <md:MarkdownLabel 
+            <md:MarkdownLabel
+                x:Name="Markdown"
                 Text ="# {{2}}Header A  ## Header B  ### Header C _with italic_  _First Line is italic text._  New Line with Variable 1 in bold: **{{1}}**  New line with variable 3: {{3}}  *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*"
                 Header1Style="{DynamicResource Header1SpanStyleA}"
                 Header2Style="{DynamicResource Header2SpanStyle}"
@@ -84,6 +120,32 @@
                 VerticalOptions="Start"
                 HorizontalOptions="Center"
                 HorizontalTextAlignment="Center">
+                <md:MarkdownLabel.Resources>
+                    <ResourceDictionary>
+                        <Style TargetType="Span" x:Key="Header1SpanStyleA">
+                            <Setter Property="FontSize" Value="32"></Setter>
+                            <Setter Property="TextColor" Value="Blue"></Setter>
+                        </Style>
+
+                        <Style TargetType="Span" x:Key="Header1SpanStyleB">
+                            <Setter Property="FontSize" Value="32"></Setter>
+
+                            <Setter Property="TextColor" Value="Red"></Setter>
+                        </Style>
+
+                        <Style TargetType="Span" x:Key="Header2SpanStyle">
+                            <Setter Property="FontSize" Value="16"></Setter>
+                            <Setter Property="FontAttributes" Value="Italic"></Setter>
+                        </Style>
+
+                        <Style TargetType="Span" x:Key="Header3SpanStyle">
+                            <Setter Property="FontSize" Value="12"></Setter>
+                        </Style>
+                    </ResourceDictionary>
+
+                </md:MarkdownLabel.Resources>
+
+
             </md:MarkdownLabel>
 
             <!--<md:MarkdownLabel 
