--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -128,6 +128,7 @@
                     New Line with Variable 1 in bold: **{{1}}**  
                     New line with variable 3: {{3}}
                     *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
+                    # Header 1 Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)
                 </md:MarkdownLabel.Text>
                 <md:MarkdownLabel.Resources>
                     <ResourceDictionary>
