--- a/src/test/mauiDemo/MdLabelDemo/App.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/App.xaml
@@ -2,13 +2,14 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MdLabelDemo"
-             xmlns:markdownSpan="clr-namespace:MdLabel.Span;assembly=MdLabel"
+             xmlns:markdown="clr-namespace:MdLabel;assembly=MdLabel"
              x:Class="MdLabelDemo.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <ResourceDictionary Source="Styles/Markdown.xaml;assembly=MdLabel" />
                 <ResourceDictionary>
                     <Style x:Key="Header1StyleBase" TargetType="Span"></Style>
                     <Style TargetType="local:TestHeader1Span" BasedOn="{StaticResource Header1StyleBase}">
@@ -16,11 +17,38 @@
                         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Blue100Accent}, Dark={StaticResource Cyan100Accent}}"></Setter>
                     </Style>
 
-                    <Style x:Key="MarkdownHeaderStyleBase" TargetType="markdownSpan:MarkdownHeaderSpanBase"></Style>
-                    <Style TargetType="markdownSpan:MarkdownHeader1Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="24"></Setter>
+                    <!--<Style x:Key="MarkdownHeaderStyleBase" TargetType="markdownSpan:MarkdownHeaderSpanBase">
                         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Blue100Accent}, Dark={StaticResource Cyan100Accent}}"></Setter>
                     </Style>
+
+                    <Style x:Key="MarkdownHeader1StyleBase" TargetType="markdownSpan:MarkdownHeader1SpanBase" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
+                        <Setter Property="FontSize" Value="32"></Setter>
+                    </Style>
+
+                    <Style TargetType="markdownSpan:MarkdownHeader1Span" BasedOn="{StaticResource MarkdownHeader1StyleBase}">
+                                             
+                    </Style>
+                    <Style TargetType="markdownSpan:MarkdownHeader2Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
+                        <Setter Property="FontSize" Value="24"></Setter>                        
+                    </Style>
+                    <Style TargetType="markdownSpan:MarkdownHeader3Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
+                        <Setter Property="FontSize" Value="20"></Setter>
+                    </Style>
+                    <Style TargetType="markdownSpan:MarkdownHeader4Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
+                        <Setter Property="FontSize" Value="18"></Setter>
+                    </Style>
+                    <Style TargetType="markdownSpan:MarkdownHeader5Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
+                        <Setter Property="FontSize" Value="16"></Setter>
+                    </Style>
+                    <Style TargetType="markdownSpan:MarkdownHeader6Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
+                        <Setter Property="FontSize" Value="14"></Setter>
+                    </Style>
+
+                    <Style TargetType="markdownSpan:MarkdownHeader1LinkSpan" BasedOn="{StaticResource MarkdownHeader1StyleBase}">
+                        <Setter Property="TextDecorations"  Value="Underline"></Setter>
+                        <Setter Property="FontAttributes"  Value="Italic"></Setter>
+                    </Style>-->
+                    
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
