--- a/src/test/mauiDemo/MdLabelDemo/App.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/App.xaml
@@ -2,7 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MdLabelDemo"
-             xmlns:markdown="clr-namespace:MdLabel;assembly=MdLabel"
+             xmlns:md="clr-namespace:MdLabel.Spans;assembly=MdLabel"
              x:Class="MdLabelDemo.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -17,36 +17,8 @@
                         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Blue100Accent}, Dark={StaticResource Cyan100Accent}}"></Setter>
                     </Style>
 
-                    <!--<Style x:Key="MarkdownHeaderStyleBase" TargetType="markdownSpan:MarkdownHeaderSpanBase">
-                        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Blue100Accent}, Dark={StaticResource Cyan100Accent}}"></Setter>
-                    </Style>
-
-                    <Style x:Key="MarkdownHeader1StyleBase" TargetType="markdownSpan:MarkdownHeader1SpanBase" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="32"></Setter>
-                    </Style>
-
-                    <Style TargetType="markdownSpan:MarkdownHeader1Span" BasedOn="{StaticResource MarkdownHeader1StyleBase}">
-                                             
-                    </Style>
-                    <Style TargetType="markdownSpan:MarkdownHeader2Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="24"></Setter>                        
-                    </Style>
-                    <Style TargetType="markdownSpan:MarkdownHeader3Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="20"></Setter>
-                    </Style>
-                    <Style TargetType="markdownSpan:MarkdownHeader4Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="18"></Setter>
-                    </Style>
-                    <Style TargetType="markdownSpan:MarkdownHeader5Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="16"></Setter>
-                    </Style>
-                    <Style TargetType="markdownSpan:MarkdownHeader6Span" BasedOn="{StaticResource MarkdownHeaderStyleBase}">
-                        <Setter Property="FontSize" Value="14"></Setter>
-                    </Style>
-
-                    <Style TargetType="markdownSpan:MarkdownHeader1LinkSpan" BasedOn="{StaticResource MarkdownHeader1StyleBase}">
-                        <Setter Property="TextDecorations"  Value="Underline"></Setter>
-                        <Setter Property="FontAttributes"  Value="Italic"></Setter>
+                    <!--<Style x:Key="MarkdownHeaderStyleBase" TargetType="md:MarkdownHeaderSpanBase">
+                        <Setter Property="TextColor" Value="Red"></Setter>
                     </Style>-->
                     
                 </ResourceDictionary>
