--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -113,6 +113,12 @@
                 HorizontalOptions="Center">
             </md:MarkdownView>-->
 
+            <Button 
+                x:Name="MarkdownUpdateBtn"
+                Text="Update markdown"
+                Clicked="OnMarkdownUpdate"
+                HorizontalOptions="Center" />
+
             <md:MarkdownLabel
                 x:Name="Markdown"
                 FontSize="12"
@@ -121,12 +127,12 @@
                 HorizontalOptions="Center"
                 HorizontalTextAlignment="Center">
                 <md:MarkdownLabel.Text>
-                    # {{2}}Header A  
+                    # Header A  
                     ## Header B  
                     ### Header C _with italic_  
                     _First Line is italic text._  
-                    New Line with Variable 1 in bold: **{{1}}**  
-                    New line with variable 3: {{3}}
+                    **New Line in bold**  
+                    New line
                     *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
                     # Header 1 Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)
                 </md:MarkdownLabel.Text>
