--- a/src/maui/MdLabel/MdLabel/Styles/Markdown.xaml
+++ b/src/maui/MdLabel/MdLabel/Styles/Markdown.xaml
@@ -15,6 +15,8 @@
         <Setter Property="FontSize" Value="Default"></Setter>
     </Style>
 
+    <Style TargetType="md:MarkdownInlineSpan" BasedOn="{StaticResource MarkdownInlineBase}"/>
+
     <Style x:Key="MarkdownHeaderStyleBase" TargetType="md:MarkdownHeaderSpanBase">        
     </Style>
     
