--- a/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
+++ b/src/test/mauiDemo/MdLabelDemo/MainPage.xaml
@@ -131,7 +131,8 @@
                     ### Header C _with italic_  
                     _First Line is italic text._  
                     **New Line in bold**  
-                    New line
+                    ~~New line strike through~~  
+                    New line normal
                     *Italic Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)*
                     # Header 1 Link: [Microsoft Azure B2C login](https://blogs.msdn.microsoft.com/azureadb2c/2018/10/05/b2clogin-com-is-now-generally-available/)
                 </md:MarkdownLabel.Text>
